editor-master/symantic/ciaoParser.py
# Generated from ciao.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class ciaoParser ( Parser ):

    grammarFileName = "ciao.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'VAR'", "':='", "'REQUIRED'", "'('", 
                     "')'", "'PROVIDED'", "'INNER'", "'QUERY'", "'STATE'", 
                     "'->'", "','", "'||'", "'&&'", "'=='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'!'", "'-'", "'+'", "'*'", 
                     "'/'", "'True'", "'False'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "OR", "AND", "EQ", "NEQ", "GT", "LT", "GTEQ", "LTEQ", 
                      "NOT", "MINUS", "PLUS", "MULT", "DIV", "TRUE", "FALSE", 
                      "ID", "INT", "FLOAT", "STRING", "SPACE" ]

    RULE_p = 0
    RULE_n = 1
    RULE_v = 2
    RULE_e = 3
    RULE_a = 4
    RULE_r = 5
    RULE_q = 6
    RULE_u = 7
    RULE_condition = 8
    RULE_action = 9
    RULE_variables = 10
    RULE_values = 11
    RULE_expr = 12
    RULE_atom = 13

    ruleNames =  [ "p", "n", "v", "e", "a", "r", "q", "u", "condition", 
                   "action", "variables", "values", "expr", "atom" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    OR=12
    AND=13
    EQ=14
    NEQ=15
    GT=16
    LT=17
    GTEQ=18
    LTEQ=19
    NOT=20
    MINUS=21
    PLUS=22
    MULT=23
    DIV=24
    TRUE=25
    FALSE=26
    ID=27
    INT=28
    FLOAT=29
    STRING=30
    SPACE=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class PContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def n(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ciaoParser.NContext)
            else:
                return self.getTypedRuleContext(ciaoParser.NContext,i)


        def u(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ciaoParser.UContext)
            else:
                return self.getTypedRuleContext(ciaoParser.UContext,i)


        def v(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ciaoParser.VContext)
            else:
                return self.getTypedRuleContext(ciaoParser.VContext,i)


        def e(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ciaoParser.EContext)
            else:
                return self.getTypedRuleContext(ciaoParser.EContext,i)


        def a(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ciaoParser.AContext)
            else:
                return self.getTypedRuleContext(ciaoParser.AContext,i)


        def r(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ciaoParser.RContext)
            else:
                return self.getTypedRuleContext(ciaoParser.RContext,i)


        def q(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ciaoParser.QContext)
            else:
                return self.getTypedRuleContext(ciaoParser.QContext,i)


        def getRuleIndex(self):
            return ciaoParser.RULE_p

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP" ):
                listener.enterP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP" ):
                listener.exitP(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitP" ):
                return visitor.visitP(self)
            else:
                return visitor.visitChildren(self)




    def p(self):

        localctx = ciaoParser.PContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 28
                self.n()
                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ciaoParser.T__0:
                    self.state = 29
                    self.v()


                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ciaoParser.T__2:
                    self.state = 32
                    self.e()


                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ciaoParser.T__5:
                    self.state = 35
                    self.a()


                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ciaoParser.T__6:
                    self.state = 38
                    self.r()


                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ciaoParser.T__7:
                    self.state = 41
                    self.q()


                self.state = 44
                self.u()
                self.state = 48 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ciaoParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ciaoParser.ID, 0)

        def getRuleIndex(self):
            return ciaoParser.RULE_n

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterN" ):
                listener.enterN(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitN" ):
                listener.exitN(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitN" ):
                return visitor.visitN(self)
            else:
                return visitor.visitChildren(self)




    def n(self):

        localctx = ciaoParser.NContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_n)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(ciaoParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ciaoParser.ID)
            else:
                return self.getToken(ciaoParser.ID, i)

        def atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ciaoParser.AtomContext)
            else:
                return self.getTypedRuleContext(ciaoParser.AtomContext,i)


        def getRuleIndex(self):
            return ciaoParser.RULE_v

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterV" ):
                listener.enterV(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitV" ):
                listener.exitV(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitV" ):
                return visitor.visitV(self)
            else:
                return visitor.visitChildren(self)




    def v(self):

        localctx = ciaoParser.VContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_v)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(ciaoParser.T__0)
            self.state = 56 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 53
                self.match(ciaoParser.ID)
                self.state = 54
                self.match(ciaoParser.T__1)
                self.state = 55
                self.atom()
                self.state = 58 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ciaoParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ciaoParser.ID)
            else:
                return self.getToken(ciaoParser.ID, i)

        def variables(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ciaoParser.VariablesContext)
            else:
                return self.getTypedRuleContext(ciaoParser.VariablesContext,i)


        def getRuleIndex(self):
            return ciaoParser.RULE_e

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterE" ):
                listener.enterE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitE" ):
                listener.exitE(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitE" ):
                return visitor.visitE(self)
            else:
                return visitor.visitChildren(self)




    def e(self):

        localctx = ciaoParser.EContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_e)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(ciaoParser.T__2)
            self.state = 66 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 61
                self.match(ciaoParser.ID)
                self.state = 62
                self.match(ciaoParser.T__3)
                self.state = 63
                self.variables()
                self.state = 64
                self.match(ciaoParser.T__4)
                self.state = 68 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ciaoParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ciaoParser.ID)
            else:
                return self.getToken(ciaoParser.ID, i)

        def variables(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ciaoParser.VariablesContext)
            else:
                return self.getTypedRuleContext(ciaoParser.VariablesContext,i)


        def getRuleIndex(self):
            return ciaoParser.RULE_a

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterA" ):
                listener.enterA(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitA" ):
                listener.exitA(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitA" ):
                return visitor.visitA(self)
            else:
                return visitor.visitChildren(self)




    def a(self):

        localctx = ciaoParser.AContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_a)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(ciaoParser.T__5)
            self.state = 76 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 71
                self.match(ciaoParser.ID)
                self.state = 72
                self.match(ciaoParser.T__3)
                self.state = 73
                self.variables()
                self.state = 74
                self.match(ciaoParser.T__4)
                self.state = 78 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ciaoParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ciaoParser.ID)
            else:
                return self.getToken(ciaoParser.ID, i)

        def variables(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ciaoParser.VariablesContext)
            else:
                return self.getTypedRuleContext(ciaoParser.VariablesContext,i)


        def getRuleIndex(self):
            return ciaoParser.RULE_r

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR" ):
                listener.enterR(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR" ):
                listener.exitR(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitR" ):
                return visitor.visitR(self)
            else:
                return visitor.visitChildren(self)




    def r(self):

        localctx = ciaoParser.RContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_r)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(ciaoParser.T__6)
            self.state = 86 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 81
                self.match(ciaoParser.ID)
                self.state = 82
                self.match(ciaoParser.T__3)
                self.state = 83
                self.variables()
                self.state = 84
                self.match(ciaoParser.T__4)
                self.state = 88 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ciaoParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ciaoParser.ID)
            else:
                return self.getToken(ciaoParser.ID, i)

        def variables(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ciaoParser.VariablesContext)
            else:
                return self.getTypedRuleContext(ciaoParser.VariablesContext,i)


        def getRuleIndex(self):
            return ciaoParser.RULE_q

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQ" ):
                listener.enterQ(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQ" ):
                listener.exitQ(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQ" ):
                return visitor.visitQ(self)
            else:
                return visitor.visitChildren(self)




    def q(self):

        localctx = ciaoParser.QContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_q)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(ciaoParser.T__7)
            self.state = 96 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 91
                self.match(ciaoParser.ID)
                self.state = 92
                self.match(ciaoParser.T__3)
                self.state = 93
                self.variables()
                self.state = 94
                self.match(ciaoParser.T__4)
                self.state = 98 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ciaoParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ciaoParser.ID)
            else:
                return self.getToken(ciaoParser.ID, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(ciaoParser.DIV)
            else:
                return self.getToken(ciaoParser.DIV, i)

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ciaoParser.ConditionContext)
            else:
                return self.getTypedRuleContext(ciaoParser.ConditionContext,i)


        def action(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ciaoParser.ActionContext)
            else:
                return self.getTypedRuleContext(ciaoParser.ActionContext,i)


        def getRuleIndex(self):
            return ciaoParser.RULE_u

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterU" ):
                listener.enterU(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitU" ):
                listener.exitU(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitU" ):
                return visitor.visitU(self)
            else:
                return visitor.visitChildren(self)




    def u(self):

        localctx = ciaoParser.UContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_u)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(ciaoParser.T__8)
            self.state = 112 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 101
                    self.match(ciaoParser.ID)
                    self.state = 102
                    self.match(ciaoParser.T__9)
                    self.state = 104
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ciaoParser.T__3) | (1 << ciaoParser.NOT) | (1 << ciaoParser.MINUS) | (1 << ciaoParser.TRUE) | (1 << ciaoParser.FALSE) | (1 << ciaoParser.ID) | (1 << ciaoParser.INT) | (1 << ciaoParser.FLOAT) | (1 << ciaoParser.STRING))) != 0):
                        self.state = 103
                        self.condition()


                    self.state = 106
                    self.match(ciaoParser.DIV)
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==ciaoParser.ID:
                        self.state = 107
                        self.action()


                    self.state = 110
                    self.match(ciaoParser.T__9)
                    self.state = 111
                    self.match(ciaoParser.ID)

                else:
                    raise NoViableAltException(self)
                self.state = 114 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ciaoParser.RULE_condition

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExprConditionContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ciaoParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ciaoParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprCondition" ):
                listener.enterExprCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprCondition" ):
                listener.exitExprCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprCondition" ):
                return visitor.visitExprCondition(self)
            else:
                return visitor.visitChildren(self)


    class FuncConditionContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ciaoParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ciaoParser.ID, 0)
        def values(self):
            return self.getTypedRuleContext(ciaoParser.ValuesContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncCondition" ):
                listener.enterFuncCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncCondition" ):
                listener.exitFuncCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncCondition" ):
                return visitor.visitFuncCondition(self)
            else:
                return visitor.visitChildren(self)



    def condition(self):

        localctx = ciaoParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condition)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                localctx = ciaoParser.FuncConditionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.match(ciaoParser.ID)
                self.state = 117
                self.match(ciaoParser.T__3)
                self.state = 118
                self.values()
                self.state = 119
                self.match(ciaoParser.T__4)
                pass

            elif la_ == 2:
                localctx = ciaoParser.ExprConditionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ActionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ciaoParser.RULE_action

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FuncActionContext(ActionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ciaoParser.ActionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ciaoParser.ID, 0)
        def values(self):
            return self.getTypedRuleContext(ciaoParser.ValuesContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncAction" ):
                listener.enterFuncAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncAction" ):
                listener.exitFuncAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncAction" ):
                return visitor.visitFuncAction(self)
            else:
                return visitor.visitChildren(self)


    class ExprActionContext(ActionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ciaoParser.ActionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ciaoParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(ciaoParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprAction" ):
                listener.enterExprAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprAction" ):
                listener.exitExprAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprAction" ):
                return visitor.visitExprAction(self)
            else:
                return visitor.visitChildren(self)



    def action(self):

        localctx = ciaoParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_action)
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                localctx = ciaoParser.ExprActionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(ciaoParser.ID)
                self.state = 125
                self.match(ciaoParser.T__1)
                self.state = 126
                self.expr(0)
                pass

            elif la_ == 2:
                localctx = ciaoParser.FuncActionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.match(ciaoParser.ID)
                self.state = 128
                self.match(ciaoParser.T__3)
                self.state = 129
                self.values()
                self.state = 130
                self.match(ciaoParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariablesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ciaoParser.ID)
            else:
                return self.getToken(ciaoParser.ID, i)

        def getRuleIndex(self):
            return ciaoParser.RULE_variables

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariables" ):
                listener.enterVariables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariables" ):
                listener.exitVariables(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariables" ):
                return visitor.visitVariables(self)
            else:
                return visitor.visitChildren(self)




    def variables(self):

        localctx = ciaoParser.VariablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_variables)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ciaoParser.ID:
                self.state = 134
                self.match(ciaoParser.ID)


            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ciaoParser.T__10:
                self.state = 137
                self.match(ciaoParser.T__10)
                self.state = 138
                self.match(ciaoParser.ID)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValuesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ciaoParser.ExprContext)
            else:
                return self.getTypedRuleContext(ciaoParser.ExprContext,i)


        def getRuleIndex(self):
            return ciaoParser.RULE_values

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValues" ):
                listener.enterValues(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValues" ):
                listener.exitValues(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValues" ):
                return visitor.visitValues(self)
            else:
                return visitor.visitChildren(self)




    def values(self):

        localctx = ciaoParser.ValuesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_values)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ciaoParser.T__3) | (1 << ciaoParser.NOT) | (1 << ciaoParser.MINUS) | (1 << ciaoParser.TRUE) | (1 << ciaoParser.FALSE) | (1 << ciaoParser.ID) | (1 << ciaoParser.INT) | (1 << ciaoParser.FLOAT) | (1 << ciaoParser.STRING))) != 0):
                self.state = 144
                self.expr(0)


            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ciaoParser.T__10:
                self.state = 147
                self.match(ciaoParser.T__10)
                self.state = 148
                self.expr(0)
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ciaoParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NotExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ciaoParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(ciaoParser.NOT, 0)
        def expr(self):
            return self.getTypedRuleContext(ciaoParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotExpr" ):
                listener.enterNotExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotExpr" ):
                listener.exitNotExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotExpr" ):
                return visitor.visitNotExpr(self)
            else:
                return visitor.visitChildren(self)


    class UnaryMinusExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ciaoParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MINUS(self):
            return self.getToken(ciaoParser.MINUS, 0)
        def expr(self):
            return self.getTypedRuleContext(ciaoParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryMinusExpr" ):
                listener.enterUnaryMinusExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryMinusExpr" ):
                listener.exitUnaryMinusExpr(self)
